# banong-radio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: demo_manifest.json  village_feed.json
docs/: architecture.md  decisions.md  demo-flow.md  final-acceptance.md  index.html  judge-submission.md  live-demo-runbook.md  operation.md
docs/pitch/: index.html
docs/pitch/assets/: midnight-chat-radio.m4a  qintobang-radio.m4a
src/banong_radio/: __init__.py  agent_contracts.py  cli.py  domain.py  mixer.py  music.py  player_worker.py  program.py  runtime.py  schedule.py  sdk_workflow.py  status_server.py  text_flow.py  text_outputs.py  tts.py
tests/: test_agent_contracts.py  test_cli.py  test_docs.py  test_domain.py  test_music.py  test_package.py  test_program.py  test_runtime.py  test_schedule.py  test_sdk_workflow.py  test_skeleton.py  test_status_server.py  test_text_flow.py  test_text_outputs.py  test_tts.py
web/: status_screen.html
