[project]
name = "banong-radio"
version = "0.1.0"
description = "Local AI radio runtime for Jianya Village Media."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
banong-radio = "banong_radio.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
