[project]
name = "banong-radio"
version = "0.1.0"
description = "Fallback-safe local AI radio runtime for village media."
requires-python = ">=3.10"
dependencies = ["openai-agents>=0.14.0"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
banong-radio = "banong_radio.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
